--- a/sistema/package.json
+++ b/sistema/package.json
@@ -1,9 +1,11 @@
 {
   "name": "sistema",
+  "homepage": "http://victor200524.github.io/Sistema_de_Imoveis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "gh-pages": "^6.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
@@ -12,6 +14,8 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
