--- a/sistema-front/package.json
+++ b/sistema-front/package.json
@@ -1,11 +1,11 @@
 {
   "name": "sistema",
-  "homepage": "http://Victor200524.github.io/Sistema_de_Imoveis",
+  "homepage": "https://Victor200524.github.io/Sistema_de_Imoveis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
-    "gh-pages": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
@@ -15,9 +15,9 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build", 
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
